--- a/HangMan/style.css
+++ b/HangMan/style.css
@@ -1,32 +1,81 @@
-body{
-    font-family: Segoe Print;
-    background-color: rgb(175, 175, 175);
+@import url('https://fonts.googleapis.com/css2?family=Chilanka&display=swap');
+body {
+    position: relative;
+    font-family: 'Chilanka', cursive;
+    background-color: #f2f3f4;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
 }
-.container{
-    margin: auto;
+
+div.message {
+    position: absolute;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    color: #2e4053;
+    border: 2px solid #2e4053;
+    padding: 8px 12px 6px;
+    border-radius: 8px;
+    margin: 0;
+    top: -40;
+    transition: 0.3s ease-in;
+}
+
+div.message.active {
+    top: 0;
+}
+
+.container {
+    margin-top: 10%;
     width: 80%;
 }
-h1{
-    font-family: Segoe Script;
-    margin: 20px auto;
+
+h1 {
+    position: relative;
+    margin: 15px auto;
+    transform: translateX(-30px);
     text-align: center;
 }
-h2{
+
+h1::after {
+    position: absolute;
+    content: 'Man';
+    padding-top: 2px;
+    color: #fff;
+    background: #000;
+    height: 28px;
+    top: 4px;
+    margin: 0;
+    border-radius: 10%;
+}
+
+h2 {
     font-size: 20px;
     color: rgb(77, 77, 77);
-    margin: 20px auto;
+    margin: 10px auto;
     text-align: center;
 }
-.first{
+
+.first {
     margin: 0 25%;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
     justify-content: center;
 }
-.first .man{
-  height: 280px;
+
+.first .man {
+    height: 280px;
+    width: 160px;
 }
-.second{
+
+.first .details {
+    width: 150px;
+    padding: 5px;
+}
+.second {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 30px;
