--- a/HangMan/style.css
+++ b/HangMan/style.css
@@ -20,8 +20,9 @@ div.message {
     padding: 8px 12px 6px;
     border-radius: 8px;
     margin: 0;
-    top: -40;
+    top: -45;
     transition: 0.3s ease-in;
+    box-shadow: 3px 3px 5px #9ea4ad;
 }
 
 div.message.active {
